--- a/src/cssFile/Card.css
+++ b/src/cssFile/Card.css
@@ -1,8 +1,11 @@
 .klong {
-    background-color: antiquewhite;
-    /* position: absolute; */
+    /* background-color: antiquewhite; */
+    /* position: absolute;
     align-items: center;
     display: flex; 
     justify-content: center;
     flex-direction: column;
+    width: 390px;
+    margin-left: 0px;
+    margin-right: 0px; */
 }
