--- a/src/cssFile/Header.css
+++ b/src/cssFile/Header.css
@@ -1,11 +1,12 @@
 .Header {
  
-  /* background:linear-gradient(80deg, rgba(249, 211, 1, 0.5) , rgba(246, 9, 19, 0.4)); */
-  background-color: aquamarine;
+  background:linear-gradient(80deg, rgb(25,118,159) , rgb(53,216,166));
+  /* background-color: aquamarine; */
+  color: aliceblue;
 
   position: absolute;
   width: 100%;
-  height: 45px;
+  height: 65px;
   /* font-family: 'Courier New', Courier, monospace; */
   font-size: 18px;
   top: 0;
@@ -41,3 +42,6 @@
   
 }
 
+.App {
+  margin: 0px;
+}
